<resources>
    <string name="app_name">Investo</string>
    <string name="cash_in">Cash In +</string>
    <string name="cash_out">Cash Out -</string>
    <string name="percentage">%</string>
    <string name="dot">.</string>
    <string name="zero">0</string>
    <string name="ac">AC</string>
    <string name="minus">-</string>
    <string name="three">3</string>
    <string name="two">2</string>
    <string name="one">1</string>
    <string name="plus">+</string>
    <string name="six">6</string>
    <string name="five">5</string>
    <string name="four">4</string>
    <string name="multiply">*</string>
    <string name="nine">9</string>
    <string name="eight">8</string>
    <string name="seven">7</string>
    <string name="div">/</string>
    <string name="close_bracket">)</string>
    <string name="open_bracket">(</string>
    <string name="backspace">C</string>
    <string name="due">Due</string>
    <string name="payment_method">Payment Method</string>
    <string name="paid">Paid</string>
    <string name="cancelled">Cancelled</string>
    <string name="register">REGISTER</string>
    <string name="login_email_hint">Email</string>
    <string name="login_password_hint">Password</string>
    <string name="signup_login_hint">Already have an account? Sign In</string>
    <string name="login_signup_hint">Don\'t have an account? Sign Up</string>
    <string name="selected_date_format">%d-%02d-%02d</string>
    <string name="pdf_generator">Account Statement</string>
    <string name="generate_statement">Generate Statement</string>
    <string name="payment_type">Payment Type:</string>
    <string name="payment_status">Payment Status:</string>
    <string name="select_end_date">Select End Date</string>
    <string name="end_date">End Date:</string>
    <string name="select_start_date">Select Start Date</string>
    <string name="start_date">Start Date:</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="account_statement">Account Statement</string>
    <string name="view_p_l_statement">View P/L statement</string>
    <string name="profit_loss">Profit / Loss</string>
    <string name="welcome_nto_investo">Welcome \nto Investo</string>
    <string name="get_started">Get Started</string>
    <string name="hi_nplease_login">Hi, \nPlease Login</string>
    <string name="google">Sign In With Google</string>
    <string name="forget_password">Forget Password</string>
    <string name="total_cash_in">Total Cash In:</string>
    <string name="total_cash_out">Total Cash Out:</string>
    <string name="goto_pos_home">Go to POS Home</string>
    <string name="hi_nyour_profit_loss_nstatement">Hi,\nYour Profit Loss\nStatement</string>
    <string name="okay">Okay</string>
    <string name="cancel">Cancel</string>
    <string name="enter_your_name">Enter your name</string>
    <string name="enter_your_upi_id">Enter your UPI Id</string>
    <string name="hi_ncheck_profit_loss">Hi, \nCheck Profit / Loss</string>
    <string name="hi_ndownload_account_nstatement">Hi, \nDownload Account \nStatement</string>
    <string name="total_profit_or_loss">Total Profit Or Loss:</string>
    <string name="hi_nscan_qr_to_pay">Scan QR Code To \nMake Payment</string>
    <string name="business_details">Business Details</string>
    <string name="contact_us">Contact Us</string>
    <string name="share">Share</string>
    <string name="logout">Logout</string>
    <string name="mpos_nquick_menu">mPOS \nQuick Menu</string>
    <string name="name">Name (As per Bank Account)</string>
    <string name="enter_your_bank_account_name">Enter Your Bank Account Name</string>
    <string name="business_name">Business Name</string>
    <string name="enter_your_business_name">Enter Your Business Name</string>
    <string name="update_profile">Update Profile</string>
    <string name="upi_id_virtual_payment_address">UPI Id (Virtual Payment Address)</string>
    <string name="enter_upi_id_eg_9876543210_ybl">Enter UPI Id eg. 9876543210@ybl</string>
    <string name="hi_nplease_contact_nus">Hi, \nPlease Contact \nUs</string>
    <string name="send_email">Send Email</string>
    <string name="type_your_issue_concern">Type Your Issue / Concern</string>
    <string name="type_you_message">Type your message …</string>
    <string name="hi_nreset_your_password">Hi,\nReset Your Password</string>
    <string name="use_gpay_phonepe_paytm_or_any_other_upi_payment_app_to_make_the_payment">Use Gpay / Phonepe / Paytm or any other UPI payment app to make the payment</string>
    <string name="default_web_client_id">571756216027-v1m7iehpka3krqmp9nb0rks5otdo05tp.apps.googleusercontent.com</string>
    <string name="keep_track_all_of_your_investments">Keep Track All Of Your Investments</string>
    <string name="add_investment">Add Investment</string>
    <string name="view_investment">View Investment</string>
    <string name="please_select_nsuitable_action">Please Select \nSuitable Action</string>
    <string name="select_preferable_action">Select Preferable Action</string>
    <string name="hi_nplease_add_your_ninvestment_ndetails">Hi, \nPlease Add Your\nInvestment\nDetails</string>
    <string name="account_investment_id">Account / Investment Number</string>
    <string name="bank_firm_name">Bank / Firm Name</string>
    <string name="branch_name">Branch Name</string>
    <string name="enter_your_account_number">Enter Your Account Number</string>
    <string name="enter_your_bank_name">Enter Your Bank Name</string>
    <string name="enter_branch_name">Enter Branch Name</string>
    <string name="special_notes">Special Notes</string>
    <string name="enter_any_important_note_if_necessary">Enter Any Important Note If Necessary</string>
    <string name="select_date_of_deposit">Select Date Of Deposit</string>
    <string name="date_of_deposit">Date Of Deposit</string>
    <string name="select_date_of_maturity">Select Date Of Maturity</string>
    <string name="date_of_maturity">Date Of Maturity</string>
    <string name="your_investments">Your Investments</string>
    <string name="deposit_amount">Deposit Amount</string>
    <string name="maturity_amount">Maturity Amount</string>
    <string name="status">Status</string>
    <string name="enter_current_status_of_investment">Enter Current Status Of Investment</string>
    <string name="enter_maturity_amount_if_you_know">Enter Maturity Amount If You Know</string>
    <string name="enter_deposit_amount">Enter Deposit Amount</string>
    <string name="investment_details">Hi, \nPlease Find Your \nInvestment \nDetails</string>
    <string name="update_details">Update Details</string>
    <string name="remarks">Remarks:</string>
    <string name="maturity_date">Maturity Date:</string>
    <string name="deposit_date">Deposit Date:</string>
    <string name="bank_name">Bank Name:</string>
    <string name="account_number">Account Number:</string>
    <string name="hi_nupdate_your_ninvestment_ndetails">Hi, \nUpdate Your \nInvestment \nDetails</string>
    <string name="hi_nplease_findyour_nall_investment_ndetails">Hi, \nPlease Find Your \nInvestment \nDetails</string>
    <string name="remarks_">Remarks</string>
    <string name="export_investment_pdf">Export Investment Pdf</string>
    <string name="active">Active</string>
    <string name="matured">Matured</string>
    <string name="closed">Closed</string>
    <string name="use_fingerprint">Use Fingerprint</string>
    <string name="delete_record">Delete Record</string>
    <string name="search">Search</string>
    <string name="enter_account_number">Enter Account Number</string>
    <string-array name="status_options">
        <item>Active</item>
        <item>Matured</item>
        <item>Closed</item>
    </string-array>
</resources>