<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="10dp">

    <TextView
        android:id="@+id/textview"
        android:layout_width="392dp"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        android:layout_marginTop="10dp"
        android:padding="10dp"
        android:text="@string/please_add_your_vpa_upi_id_and_name_which_is_associated_with_eg_gpay_phonepe_bharatpe_etc"
        android:textAlignment="center"
        android:textSize="22sp"
        android:textStyle="bold"
        tools:ignore="RtlCompat" />

    <EditText
        android:id="@+id/edit_text_vpa"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/textview"
        android:hint="@string/enter_your_upi_id" />

    <EditText
        android:id="@+id/edit_text_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/edit_text_vpa"
        android:hint="@string/enter_your_name" />

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/edit_text_name"
        android:layout_margin="15dp"
        android:layout_centerHorizontal="true">

        <TextView
            android:id="@+id/button_cancel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="30dp"
            android:layout_toEndOf="@id/button_confirm"
            android:text="@string/cancel"
            android:textStyle="bold"
            android:textColor="#FF0000"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/button_confirm"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="100dp"
            android:text="@string/okay"
            android:textStyle="bold"
            android:textColor="#3F51B5"
            android:textSize="20sp" />

    </RelativeLayout>

</RelativeLayout>
