<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:ads="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#F2F2F2">

    <ImageView
        android:id="@+id/imageView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:scaleType="centerCrop"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/top_background" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/hi_ndownload_account_nstatement"
        android:layout_marginStart="32dp"
        android:layout_marginTop="32dp"
        android:textSize="30sp"
        android:textStyle="bold"
        android:textColor="#ffffff"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.gms.ads.AdView
        android:id="@+id/adView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        ads:adSize="BANNER"
        ads:adUnitId="ca-app-pub-8480139788406894/4391988145"
        app:layout_constraintBottom_toTopOf="@+id/linearLayout5"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView3"
        tools:ignore="MissingConstraints">
    </com.google.android.gms.ads.AdView>

    <LinearLayout
        android:id="@+id/linearLayout5"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="32dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView3">

        <TextView
            android:id="@+id/tvStartDateLabel"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/start_date"
            android:textColor="#000000"
            android:textSize="20sp"
            android:textStyle="bold" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btnStartDate"
            style="@android:style/Widget.Button"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginTop="12dp"
            android:background="@drawable/cash_button_background"
            android:text="@string/select_start_date"
            android:textColor="#ffffff"
            android:textSize="25sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/tvEndDateLabel"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="18dp"
            android:text="@string/end_date"
            android:textColor="#000000"
            android:textSize="20sp"
            android:textStyle="bold" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btnEndDate"
            style="@android:style/Widget.Button"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginTop="12dp"
            android:background="@drawable/cash_button_background"
            android:text="@string/select_end_date"
            android:textColor="#ffffff"
            android:textSize="25sp"
            android:textStyle="bold" />

        <!-- Payment Status Label -->
        <TextView
            android:id="@+id/tvPaymentStatusLabel"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="18dp"
            android:text="@string/payment_status"
            android:textColor="#000000"
            android:textSize="20sp"
            android:textStyle="bold" />

        <!-- Payment Status Spinner -->
        <Spinner
            android:id="@+id/paymentStatusSpinner"
            android:layout_width="match_parent"
            android:layout_height="36dp"
            android:background="@drawable/cash_button_background"
            android:textColor="#ffffff"
            android:layout_marginTop="12dp"
            android:layout_marginBottom="26dp" />

        <!-- Payment Type Label -->
        <TextView
            android:id="@+id/tvPaymentTypeLabel"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:text="@string/payment_type"
            android:textColor="#000000"
            android:textSize="20sp"
            android:textStyle="bold" />

        <!-- Payment Type Spinner -->
        <Spinner
            android:id="@+id/paymentTypeSpinner"
            android:layout_width="match_parent"
            android:layout_height="36dp"
            android:background="@drawable/cash_button_background"
            android:textColor="#ffffff"
            android:layout_marginTop="12dp"
            android:layout_marginBottom="26dp" />


        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btnGeneratePDF"
            style="@android:style/Widget.Button"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginTop="12dp"
            android:background="@drawable/button_background"
            android:text="@string/generate_statement"
            android:textColor="#ffffff"
            android:textSize="25sp"
            android:textStyle="bold" />
    </LinearLayout>

    <ProgressBar
        android:id="@+id/idPBLoading"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@id/adView"
        android:layout_centerHorizontal="true"
        android:layout_margin="20dp"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="@+id/linearLayout5"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>